@@ -10,38 +10,38 @@ AUX josm.png 1737 RMD160 81fc37d55d4b6b14f9a35c3ed89da3ecd7d538f2 SHA1 cd51f1182
 MD5 f883ecaa18100ce192bd8342c5e44049 files/josm.png 1737
 RMD160 81fc37d55d4b6b14f9a35c3ed89da3ecd7d538f2 files/josm.png 1737
 SHA256 fed9c1ef73900e6a3cac162a4006ab8cd972ba29938a857e8af604779109c39f files/josm.png 1737
-DIST josm-snapshot-490.jar 1304177 RMD160 38d7a53c30b2fd821245c4d4581865af95640dc0 SHA1 8bb124b932c9c4b096e00bf58c1d28a43e0e32f0 SHA256 150dc255a8f47267b024cac2c6b9aaeb10e9de2a9abfe3ef1157b6412f823261
 DIST josm-snapshot-496.jar 1304562 RMD160 eb383b3d91163d7da256bc3decd4be68926b8a75 SHA1 c1bd39999f5ace6969d4d9526ca0055214d4964d SHA256 81cc22ac8cb554f53553e13a2138744da6c2e4221e392153298c861f89d18fa6
+DIST josm-snapshot-524.jar 1341645 RMD160 eeab9273dea3a7e227d8b6ce5907a863141d1bf5 SHA1 de97dbf8acc822a89df35015299b905ce8629342 SHA256 045ed093575ecbdbf1f10eb7e5c9d45bd44e51b57accdb2e1cec6165e9afa0ab
 DIST lang-de.jar 32964 RMD160 70c8afb831b4f339e69ecff44f34d0b716d33854 SHA1 9462002e1e5d95d9e89c32b16f5b5780e54aee3a SHA256 bbaa78bd3eb9bdd8da8e6c24e5c53f7bd58e2d0a465b8441bd95836bc90fb84c
 DIST lang-en_GB.jar 15384 RMD160 1cd109db687e376bd4b33189a5cceaf5fe379360 SHA1 608fea6a4d2c129392022df0e87781b47fb0a478 SHA256 92308d212a6cdaa0a1dda8bf9d97b0d95aa3c5ff42e6e2773b2fac64fbc54e88
 DIST lang-fr.jar 22508 RMD160 8710121a5400fe30de092cb040ffbc5229bb9e79 SHA1 aa19e22e298f77bccd29c1b29df741873561f976 SHA256 c9b53bef3778ffd46343660fa4963c18a4139eb39e2917cf56981cee52c34dba
 DIST lang-ro.jar 23019 RMD160 3ccacf43f4a8be7080e9a64929b222e71565c59f SHA1 86eae74f175c9590121c324b2067cd194ba1cc2a SHA256 5a5e6275118f22f050733abe913714706fb62e44e12c4565e09b5e111ff35312
-EBUILD josm-1.5_p490.ebuild 1597 RMD160 b0bd67b5c9b1fb6aa402bb1346106a355ccded62 SHA1 64f8cd139bef843b2183b7284f86a837c1db4e76 SHA256 c5a1802c768faee544ccf7e3ba0dc07cb3f0d558b0ec47760a7dcb943b3a892d
-MD5 da29a1715355604cd331359a7cd07984 josm-1.5_p490.ebuild 1597
-RMD160 b0bd67b5c9b1fb6aa402bb1346106a355ccded62 josm-1.5_p490.ebuild 1597
-SHA256 c5a1802c768faee544ccf7e3ba0dc07cb3f0d558b0ec47760a7dcb943b3a892d josm-1.5_p490.ebuild 1597
-EBUILD josm-1.5_p496.ebuild 1597 RMD160 b0bd67b5c9b1fb6aa402bb1346106a355ccded62 SHA1 64f8cd139bef843b2183b7284f86a837c1db4e76 SHA256 c5a1802c768faee544ccf7e3ba0dc07cb3f0d558b0ec47760a7dcb943b3a892d
-MD5 da29a1715355604cd331359a7cd07984 josm-1.5_p496.ebuild 1597
-RMD160 b0bd67b5c9b1fb6aa402bb1346106a355ccded62 josm-1.5_p496.ebuild 1597
-SHA256 c5a1802c768faee544ccf7e3ba0dc07cb3f0d558b0ec47760a7dcb943b3a892d josm-1.5_p496.ebuild 1597
-EBUILD josm-9999.ebuild 845 RMD160 988c2c839a0234695f7b20e26ef8604b17bc03ee SHA1 efd0292b6d71870d94d830425c364c3640bea1b2 SHA256 919f29ae449a6267aa07b52b0f2506e0391c8abc8e48f16632911641ac5cc961
-MD5 63501e24c82e0a9ef6b0e0a995534159 josm-9999.ebuild 845
-RMD160 988c2c839a0234695f7b20e26ef8604b17bc03ee josm-9999.ebuild 845
-SHA256 919f29ae449a6267aa07b52b0f2506e0391c8abc8e48f16632911641ac5cc961 josm-9999.ebuild 845
-MISC ChangeLog 2159 RMD160 37eb712053f77f119c1b93eaf80ced837e34823b SHA1 b3957a60d457281efbab40cfc258741fd81d6df7 SHA256 9590e7867d01f7e946bc3f4f6e76a123574cb0cc58ad2eb5ad46a3fe4b79f451
-MD5 1a46729172d7ba2b0e0d734c5a909981 ChangeLog 2159
-RMD160 37eb712053f77f119c1b93eaf80ced837e34823b ChangeLog 2159
-SHA256 9590e7867d01f7e946bc3f4f6e76a123574cb0cc58ad2eb5ad46a3fe4b79f451 ChangeLog 2159
+EBUILD josm-1.5_p496.ebuild 1601 RMD160 5032215e369af721177a2299e15f9304c2673f6e SHA1 a95bd6dc49569de1893d7c5b6e16946a9663edf0 SHA256 7e6e6e07a8a6dd70030f6ed0cb2f46ea5ddd300c64ac885855262020c2f9cc42
+MD5 e3c59c87de703dfab9938d333c6e4149 josm-1.5_p496.ebuild 1601
+RMD160 5032215e369af721177a2299e15f9304c2673f6e josm-1.5_p496.ebuild 1601
+SHA256 7e6e6e07a8a6dd70030f6ed0cb2f46ea5ddd300c64ac885855262020c2f9cc42 josm-1.5_p496.ebuild 1601
+EBUILD josm-1.5_p524.ebuild 1601 RMD160 5032215e369af721177a2299e15f9304c2673f6e SHA1 a95bd6dc49569de1893d7c5b6e16946a9663edf0 SHA256 7e6e6e07a8a6dd70030f6ed0cb2f46ea5ddd300c64ac885855262020c2f9cc42
+MD5 e3c59c87de703dfab9938d333c6e4149 josm-1.5_p524.ebuild 1601
+RMD160 5032215e369af721177a2299e15f9304c2673f6e josm-1.5_p524.ebuild 1601
+SHA256 7e6e6e07a8a6dd70030f6ed0cb2f46ea5ddd300c64ac885855262020c2f9cc42 josm-1.5_p524.ebuild 1601
+EBUILD josm-9999.ebuild 850 RMD160 874d3af2b4c7f1ebda250d956aac4f96393fb9b2 SHA1 25c22cd8b75f72e03b9dd8f815c6d7c019be2018 SHA256 049d80071a060881aef8abc9ac4a7e729898e0a94e02863af89e08a8050b3c96
+MD5 0921f95c58d33066bf916ab27d1af9fa josm-9999.ebuild 850
+RMD160 874d3af2b4c7f1ebda250d956aac4f96393fb9b2 josm-9999.ebuild 850
+SHA256 049d80071a060881aef8abc9ac4a7e729898e0a94e02863af89e08a8050b3c96 josm-9999.ebuild 850
+MISC ChangeLog 2516 RMD160 306ea83dfba10544822f64cf84dee59ec10d6e46 SHA1 b4b767d712dd87db9fc0b7191b2f6aaab307299b SHA256 3261f8f110d80c2f640a762812ddb3d235aea4ce1cce8db92bb6dbb329e68bf5
+MD5 6417d6a75822b04b4e166739b11d7ef2 ChangeLog 2516
+RMD160 306ea83dfba10544822f64cf84dee59ec10d6e46 ChangeLog 2516
+SHA256 3261f8f110d80c2f640a762812ddb3d235aea4ce1cce8db92bb6dbb329e68bf5 ChangeLog 2516
 MISC metadata.xml 181 RMD160 775d1f2c12e0b493052c783fc1ea0bc2b4f69ef3 SHA1 1c0e4ca737823741153b9c78f892f3a9d70f8e1e SHA256 1c1de7f7ce2e2c7b366cf4c54e3a8549b8a6b0aeadf590b3c29cc44aa252f325
 MD5 b6d9b0fd0b2a9026981c884890ac6055 metadata.xml 181
 RMD160 775d1f2c12e0b493052c783fc1ea0bc2b4f69ef3 metadata.xml 181
 SHA256 1c1de7f7ce2e2c7b366cf4c54e3a8549b8a6b0aeadf590b3c29cc44aa252f325 metadata.xml 181
-MD5 5418855ef24054d26f148a950e96b757 files/digest-josm-1.5_p490 1100
-RMD160 a0de73ab5fbfb99a92da88be27b9967851b48b67 files/digest-josm-1.5_p490 1100
-SHA256 c9c75cc278f421202a9bf21f6392136eaa731ec4b7efc24f7726d3c72fd1a130 files/digest-josm-1.5_p490 1100
-MD5 9f7e15a8f628796255569fbd35e16cbe files/digest-josm-1.5_p496 1100
-RMD160 0a264209579cfa2dfc289bef93d5b85934e6a7e7 files/digest-josm-1.5_p496 1100
-SHA256 561cee6850d5d81f1f1607442546a0ebf5cbc5fc85f166e070eeda13bd063789 files/digest-josm-1.5_p496 1100
+MD5 4f8929433a433708191d1ceefa813ee3 files/digest-josm-1.5_p496 865
+RMD160 a1b03a9764a5c04f4d0e073f192e448385a7d425 files/digest-josm-1.5_p496 865
+SHA256 4873fcbedc85c04550c970e017d7086c99cb4facb632056b43fbf46cd6a1de10 files/digest-josm-1.5_p496 865
+MD5 5f54437927318a0366af459c88bb7e1c files/digest-josm-1.5_p524 932
+RMD160 18da3cf4754f9e1ee351442ae9a82a74983c0a18 files/digest-josm-1.5_p524 932
+SHA256 0ced841dd2b77b056d15669ce6373a53f2a89a588ada479e72a03644e710b2b5 files/digest-josm-1.5_p524 932
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-josm-9999 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-josm-9999 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-josm-9999 0
