@@ -1,0 +1,11 @@
+RMD160 eb383b3d91163d7da256bc3decd4be68926b8a75 josm-snapshot-496.jar 1304562
+SHA256 81cc22ac8cb554f53553e13a2138744da6c2e4221e392153298c861f89d18fa6 josm-snapshot-496.jar 1304562
+MD5 ac620aaecfef000c0b73e7aa819ab43e lang-de.jar 32964
+RMD160 70c8afb831b4f339e69ecff44f34d0b716d33854 lang-de.jar 32964
+SHA256 bbaa78bd3eb9bdd8da8e6c24e5c53f7bd58e2d0a465b8441bd95836bc90fb84c lang-de.jar 32964
+RMD160 1cd109db687e376bd4b33189a5cceaf5fe379360 lang-en_GB.jar 15384
+SHA256 92308d212a6cdaa0a1dda8bf9d97b0d95aa3c5ff42e6e2773b2fac64fbc54e88 lang-en_GB.jar 15384
+RMD160 8710121a5400fe30de092cb040ffbc5229bb9e79 lang-fr.jar 22508
+SHA256 c9b53bef3778ffd46343660fa4963c18a4139eb39e2917cf56981cee52c34dba lang-fr.jar 22508
+RMD160 3ccacf43f4a8be7080e9a64929b222e71565c59f lang-ro.jar 23019
+SHA256 5a5e6275118f22f050733abe913714706fb62e44e12c4565e09b5e111ff35312 lang-ro.jar 23019
