@@ -10,7 +10,7 @@ HOMEPAGE="http://josm.openstreetmap.de/"
 SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 DEPEND=">=virtual/jdk-1.5"
 IUSE=""
 
